(fix): Hide disabled scrollbars on Windows

--- a/src/app/modules/report/juryduty/session/summons.component.scss
+++ b/src/app/modules/report/juryduty/session/summons.component.scss
@@ -1,5 +1,5 @@
 m-jurydutysession__summons .m-modal-container {
-  overflow: scroll;
+  overflow: auto;
   height: 95%;
   height: 95vh;
 }
